# simple_cnn_classifier

./: README.md  model.py  pyproject.toml  train.py
