[project]
name = "simple-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "six>=1.17.0",
    "torch>=2.6.0",
    "torchmetrics>=1.6.2",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.0.0",
    "matplotlib>=3.10.1",
    "tensorboard>=2.19.0",
]
